# etl-duckdb

./: .gitignore  README.md  pipeline.py  pyproject.toml
internals/: file_manager.py
querys/: add_files.sql  history_files.sql  tracking_files.sql
